<resources>
    <string name="app_name">Instamojo Android SDK</string>
    <string name="status_bar">Status bar replacement</string>
    <string name="net_banking">Net Banking</string>
    <string name="card_number">Card Number</string>
    <string name="date_hint">Expiry MM/YY</string>
    <string name="name_on_card">Name on Card</string>
    <string name="cvv_hint">CVV</string>
    <string name="checkout">Checkout</string>
    <string name="error_message_juspay">Failed to Initiate Payment. Please try again!</string>
    <string name="please_wait">please wait…</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="title_fragment_choose_payment_option">Choose a Payment Option</string>
    <string name="save_this_card_in_secure_vault_for_future">Save this card in secure vault for future</string>
    <string name="title_fragment_credit_debit_card_form">Credit or Debit Card</string>
    <string name="choose_your_bank">Choose your Bank</string>
    <string name="search_your_bank">Search your Bank</string>
    <string name="brand_trust_logos">Brand trust logos</string>
</resources>
