<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/card_layout"
        style="@style/SelectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            style="@style/PaymentOptionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_or_debit_card" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_color" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/net_banking_layout"
        style="@style/SelectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            style="@style/PaymentOptionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_banking" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_color" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:contentDescription="@string/brand_trust_logos"
        android:src="@drawable/ic_trust" />

</LinearLayout>